fix: make PSS filter bars full-width on small screens (#328)
* fix: make PSS filter bars full-width on small screens

* fix: item image height on firefox

* styles: fix alignment of topic browse breadcrumbs

* chore: encode pss title as uri component for twitter share

--- a/components/ItemComponents/Content/ItemImage/ItemImage.css
+++ b/components/ItemComponents/Content/ItemImage/ItemImage.css
@@ -3,7 +3,6 @@
 
 .imageWrapper {
   width: 100%;
-  height: 100%;
   border-radius: 2px;
   display: flex;
   justify-content: center;
